--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ layout: default
 	</div>
 	{% endif %}
 
-	<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+	<p class="rss-subscribe">subscribe <a href="{{ "/atom.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
